# elv

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  todo.txt
.github/workflows/: build-for-release.yml  build-release.yml  publish.yml  rust.yml
src/: aoc_api.rs  aoc_domain.rs  aoc_interface.rs  api.rs  cli.rs  configuration.rs  domain.rs  driver.rs  duration_string.rs  errors.rs  infrastructure.rs  input_cache.rs  lib.rs  main.rs  submission_history.rs
src/application/: cli.rs
src/application/cli/: cli_command.rs  cli_config_subcommand.rs  cli_interface.rs
src/cli/: app.rs  cli.rs  cli_command.rs  cli_interface.rs  commands.rs
src/domain/: description.rs  duration_string.rs  errors.rs  leaderboard.rs  ports.rs  private_leaderboard.rs  riddle_date.rs  riddle_part.rs  solved_parts.rs  stars.rs  submission.rs  submission_result.rs  submission_status.rs
src/domain/ports/: aoc_client.rs  errors.rs  get_input.rs  get_leaderboard.rs  get_private_leaderboard.rs  get_stars.rs  get_test_input.rs  input_cache.rs
src/infrastructure/: aoc_api.rs  cli_display.rs  configuration.rs  driver.rs  find_riddle_part.rs  http.rs  http_description.rs  input_cache.rs  private_leaderboard.rs  submission_history.rs
src/infrastructure/aoc_api/: aoc_api_impl.rs  aoc_client_impl.rs  find_riddle_part_impl.rs  get_input_impl.rs  get_leaderboard_impl.rs  get_private_leaderboard_impl.rs  get_stars_impl.rs  get_test_input.rs
src/infrastructure/http/: aoc_api.rs
src/infrastructure/private_leaderboard/: private_leaderboard_response.rs  private_leaderboard_response_into.rs
tests/: get_stars.rs  submission_history_tests.rs
tests/common/: mod.rs
tests/resources/: leaderboards.html  private-leadearboard.html  private-leaderboard.json  riddle-description-both-parts-done.html  riddle-description-first-part-done.html  riddle-description-no-part-done.html  stars-page-full-stars.html  stars-page-no-stars.html  stars-page-partial-completion-one-star.html  stars-page-partial-completion-two-stars.html  submission-output-correct.html  submission-output-incorrect-1st-time.html  submission-output-incorrect-7th-time.html  submission-output-toosoon-minutes-seconds.html  submission-output-toosoon-seconds.html
