[package]
name = "aoc-elf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
error-chain = "0.12.4"
url = "2.3.1"
scraper = "0.13.0"
cssparser = "0.29.6"
