# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "elv"
description = "A little CLI helper for Advent of Code. 🎄"
version = "0.13.3"
authors = ["Konrad Pagacz <konrad.pagacz@gmail.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/kpagacz/elv"
repository = "https://github.com/kpagacz/elv"
keywords = ["adventofcode", "aoc", "cli", "cache", "rust"]
categories = ["command-line-utilities"]

[[bin]]
name = "elv"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
url = "2.3.1"
scraper = "0.13.0"
cssparser = "0.29.6"
directories = "4.0.1"
config = "0.13.2"
serde = "1.0.130"
serde_json = "1.0.107"
toml = "0.5.9"
serde_cbor = "0.11.2"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive", "unicode"] }
html2text = "0.4.5"
regex = "1.7.1"
thiserror = "1.0.43"
anyhow = "1.0.72"
colored = "2.0.4"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
